--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,23 @@
 html {
     font-family: 'Roboto', sans-serif;
 }
+
+.container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#show-numbers-timeout {
+    background-color: rgba(0,0,0,.5);
+    border-radius: 2rem;
+    padding: 3rem;
+    font-size: 3rem;
+    color: white;
+}
+
+
+.display-none {
+    display: none;
+}
